refactor: 쿼리 기반 필터링으로 개인 공부방 문제 조회 최적화 [#8]
- Problem 엔티티에 reviewStates OneToMany 관계 추가
- ProblemRepository에 Fetch Join 쿼리 구현
- 동적 필터링 지원 (ALL/GATE_1/GATE_2/GRADUATED)
- Service 레이어 단순화 (조합 로직 제거)
- 테스트 코드 업데이트